# OttoGuide-Proyecto_SIP-Grupo6-G1-EDU

./: .gitignore  README.md
codigo ottoguide/: README.md  main.py  pyproject.toml
codigo ottoguide/api/: router.py  schemas.py
codigo ottoguide/config/: settings.py
codigo ottoguide/hardware/: interface.py  mock_adapter.py  real_adapter.py
codigo ottoguide/scripts/: bootstrap_target.sh  cut_release.sh  deploy_to_companion.sh  freeze_dependencies.sh  mvp_master_run.sh  pre_deploy_cleanup.sh  preflight_check.sh  sre_health_check.py  verify_remote_env.sh
codigo ottoguide/src/core/: mission_audit.py  tour_orchestrator.py
codigo ottoguide/src/interaction/: audio_bridge.py  conversation_manager.py
codigo ottoguide/src/navigation/: nav2_bridge.py
codigo ottoguide/src/vision/: vision_processor.py
codigo ottoguide/static/: dashboard.html
documentacion general del proyecto/RC1_Vigente/: README_RC1_CONSOLIDADO.md
