[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otto-guide"
version = "0.1.0"
description = "OttoGuide — Robot humanoide Unitree G1 EDU 8 como guia de visitas universitarias"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Seminario de Integracion Profesional — UADE 2026"},
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "cyclonedds==0.10.2",
    "python-statemachine>=2.3.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.9",
    "SpeechRecognition>=3.10",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
hardware = [
    "unitree_sdk2py @ file:libs/unitree_sdk2_python-master",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
